Fix electricity amount display in filter_expenses.html and remove debug logging in views.py

--- a/expenses/templates/filter_expenses.html
+++ b/expenses/templates/filter_expenses.html
@@ -63,7 +63,7 @@
             </tr>
             <tr>
                 <td>Электричество</td>
-                <td>{{ utilities.amount|floatformat:2 }}</td>
+                <td>{{ electricity.amount|floatformat:2 }}</td>
                 <td>
                     {{ electricity.debt|floatformat:2 }}
                     {% if not electricity.paid and electricity.amount > 0 %}
